Fix bugs
Fix bug: new Integer is deprecated
Fix bug: declare xsl param as integer in order to perform comparisons